tests/invalid/reserved_name_find.prsm
// E101: 'find' is a reserved built-in method name
component Foo : MonoBehaviour {
    func find() {}
}
